--- a/Placement/src/resources/database.properties
+++ b/Placement/src/resources/database.properties
@@ -1,7 +1,7 @@
 database.driver=org.postgresql.Driver
 database.url=jdbc:postgresql://localhost:5432/placementdb
 database.user=postgres
-database.password=aNU!1234
+database.password=root
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create
